fixed navigation not showing

--- a/styles/modules.css
+++ b/styles/modules.css
@@ -73,7 +73,7 @@
     border-bottom: none;
   }
 
-  .main-nav ul li:hover a {
+  /*.main-nav ul li:hover a {
     color: #7dd181;
-  }
+  }*/
 }
